Revision history for Conf-Libconfig

0.013   Sat 05 Sep 2009 02:00:35 PM CST
        * Use Module::Install::CheckLib replace Devel::CheckLib. 
0.012   Tue 18 Aug 2009 08:09:09 PM CST
        * Fix delete node bug.
0.011   Tue 08 Aug 2009 10:06:17 PM CST
        * Add DESTROY can auto release memory.
0.010   Fri 07 Aug 2009 04:10:09 PM CST
        * Some small spelling fixes(daxim), and add documents about libconfig.pm.
        * Reverted the change that made every file executable(daxim).
0.009   Thu 23 Jul 2009 11:13:32 PM CST
        * Add some useful test case;
        * Implement function add_* and modify scalar.
        * Split some code which is lookup_value of method alone.
0.008   Thu 23 Jul 2009 09:45:21 AM CST
        * Fix a test failure involving float numbers(daxim);
        * Some documentation improvements(daxim);
        * Add spell test(daxim);
        * Function add_* and delete_* interface adjust.
0.007   Wed 22 Jul 2009 01:47:42 AM CST
        * Fix array list and hash ref(recognize group);
        * Modify some todo test;
        * Function add_* and delete_* interface TODO.
0.006   Wed 15 Jul 2009 12:21:31 PM CST
        * Changed tests to be more useful(daxim);
        * Established author tests(daxim);
        * Some code clean-up(daxim);
        * Add function write and write_file.
0.005   Mon 13 Jul 2009 10:45:18 AM CST
        * Check lib config and prompt.
0.004   Thu 09 Jul 2009 09:47:20 PM CST
        * Support Hash and list dumper.
0.003   Wed 08 Jul 2009 05:33:41 PM CST
        * Support Array list.
0.002   Wed 08 Jul 2009 04:13:37 PM CST
        * Use config replace config++.
0.001   Wed 08 Jul 2009 04:08:26 PM CST
        * Build first version and use link config++.
